# dndcg

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/db/: dndcg.db
cmake/: FindGTK3.cmake
include/: abilities.hpp  app.hpp  character.hpp  db_handler.hpp  races.hpp  stats.hpp  utils.hpp  weapons.hpp
include/gui/: char_gen_wizard.hpp  character_sheet.hpp  gui.hpp
include/stats/: abilities.hpp  character.hpp  races.hpp  stats.hpp
src/: app.cpp  character.cpp  db_handler.cpp  main.cpp  utils.hpp
src/gui/: char_gen_wizard.cpp  character_sheet.cpp  gui.cpp
